@@ -116,7 +116,8 @@ fi
 
 AC_ARG_ENABLE(internal-debug,  [  --enable-internal-debug   Enable internal debugging mechanism. Defaults to false],INTERNALDEBUG=${enableval},    INTERNALDEBUG=no)
 AC_ARG_ENABLE(bz2,             [  --enable-bz2              Use bz2 compression. Defaults to false],                USEBZ2=${enableval},           USEBZ2=no)
-AC_ARG_ENABLE(lzma,            [  --enable-lzma             Use lzma compression. Defaults to true],                USELZMA=${enableval},          USELZMA=yes)
+AC_ARG_ENABLE(lzma,            [  --disable-lzma            Use lzma compression. Defaults to true],                USELZMA=${enableval},          USELZMA=yes)
+AC_ARG_ENABLE(zstd,            [  --enable-zstd             Use zstd compression. Defaults to false],               USEZSTD=${enableval},          USEZSTD=no)
 AC_ARG_ENABLE(tcl-fallback,    [  --enable-tcl-fallback     Install Tcl scripts if load fails. Defaults to false],  USEFALLBACK=${enableval},      USEFALLBACK=no)
 AC_ARG_ENABLE(c-pages,         [  --disable-c-pages         Use pages handling written in C. Defaults to true],     USECPAGES=${enableval},        USECPAGES=yes)
 AC_ARG_ENABLE(c-fsindex,       [  --disable-c-fsindex       Use index handling written in C. Defaults to true],     USECFSINDEX=${enableval},      USECFSINDEX=yes)
@@ -175,7 +176,6 @@ if test ${USECPAGES} = yes; then
           [AC_MSG_RESULT([no, adding -mavx -mavx2]); TEA_ADD_CFLAGS([-mavx -mavx2])]
         )
         TEA_ADD_SOURCES([7zip/C/LzmaEnc.c 7zip/C/LzmaDec.c 7zip/C/LzFind.c 7zip/C/CpuArch.c])
-        TEA_ADD_INCLUDES([-I\"`${CYGPATH} ${srcdir}/7zip/C`\"])
         AC_DEFINE(COOKFS_USELZMA)
         # Disable multi-thread
         AC_DEFINE(Z7_ST)
@@ -185,10 +185,53 @@ if test ${USECPAGES} = yes; then
     else
         COOKFS_PKGCONFIG_USELZMA=0
     fi
+
+    if test ${USEZSTD} = yes; then
+        TEA_ADD_SOURCES([
+            zstd/lib/common/xxhash.c
+            zstd/lib/common/zstd_common.c
+            zstd/lib/common/error_private.c
+            zstd/lib/common/entropy_common.c
+            zstd/lib/common/fse_decompress.c
+        ])
+        TEA_ADD_SOURCES([
+            zstd/lib/compress/zstd_compress.c
+            zstd/lib/compress/zstd_lazy.c
+            zstd/lib/compress/zstd_fast.c
+            zstd/lib/compress/zstd_double_fast.c
+            zstd/lib/compress/zstd_opt.c
+            zstd/lib/compress/zstd_ldm.c
+            zstd/lib/compress/hist.c
+            zstd/lib/compress/zstd_compress_sequences.c
+            zstd/lib/compress/huf_compress.c
+            zstd/lib/compress/fse_compress.c
+            zstd/lib/compress/zstd_compress_literals.c
+            zstd/lib/compress/zstd_compress_superblock.c
+        ])
+        TEA_ADD_SOURCES([
+            zstd/lib/decompress/zstd_decompress.c
+            zstd/lib/decompress/zstd_ddict.c
+            zstd/lib/decompress/zstd_decompress_block.c
+            zstd/lib/decompress/huf_decompress.c
+        ])
+        AC_DEFINE(COOKFS_USEZSTD)
+        # Optimizing zstd by size
+        AC_DEFINE(HUF_FORCE_DECOMPRESS_X1)
+        AC_DEFINE(ZSTD_FORCE_DECOMPRESS_SEQUENCES_SHORT)
+        AC_DEFINE(ZSTD_NO_INLINE)
+        AC_DEFINE(ZSTD_STRIP_ERROR_STRINGS)
+        # Don't use ASM as we don't have the appropriate targets in the makefile yet
+        AC_DEFINE(ZSTD_DISABLE_ASM)
+        COOKFS_PKGCONFIG_USEZSTD=1
+    else
+        COOKFS_PKGCONFIG_USEZSTD=0
+    fi
+
 else
     COOKFS_PKGCONFIG_USECPAGES=0
     COOKFS_PKGCONFIG_FEATURE_ASIDE=0
     COOKFS_PKGCONFIG_USELZMA=0
+    COOKFS_PKGCONFIG_USEZSTD=0
 
     # Tcl implementation offers bzip2 compression only with Trf package
     COOKFS_PKGCONFIG_USEBZ2=0
@@ -276,6 +319,7 @@ AC_SUBST(COOKFS_PKGCONFIG_USECREADERCHAN)
 AC_SUBST(COOKFS_PKGCONFIG_USECWRITERCHAN)
 AC_SUBST(COOKFS_PKGCONFIG_USEBZ2)
 AC_SUBST(COOKFS_PKGCONFIG_USELZMA)
+AC_SUBST(COOKFS_PKGCONFIG_USEZSTD)
 AC_SUBST(COOKFS_PKGCONFIG_USECFSINDEX)
 AC_SUBST(COOKFS_PKGCONFIG_FEATURE_METADATA)
 AC_SUBST(COOKFS_PKGCONFIG_USECVFS)
@@ -291,6 +335,7 @@ if test ${USECPKGCONFIG} = yes; then
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USECPKGCONFIG, $COOKFS_PKGCONFIG_USECPKGCONFIG)
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USEBZ2, $COOKFS_PKGCONFIG_USEBZ2)
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USELZMA, $COOKFS_PKGCONFIG_USELZMA)
+    AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USEZSTD, $COOKFS_PKGCONFIG_USEZSTD)
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USECFSINDEX, $COOKFS_PKGCONFIG_USECFSINDEX)
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_FEATURE_METADATA, $COOKFS_PKGCONFIG_FEATURE_METADATA)
     AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USECVFS, $COOKFS_PKGCONFIG_USECVFS)
