@@ -233,7 +233,7 @@ for efficient access.</p></dd>
 <dd><p>Read archive starting at specified offset, instead of reading from end of file.</p>
 <p>This feature is used when cookfs archive is not stored at end of file - for example if it is
 used in tclkit and followed by mk4vfs archive.</p></dd>
-<dt><b class="option">-compression</b> <i class="arg">none|zlib|bz2|lzma|custom</i></dt>
+<dt><b class="option">-compression</b> <i class="arg">none|zlib|bz2|lzma|zstd|custom</i></dt>
 <dd><p>Compression to use for storing new files.</p>
 <p>See <b class="sectref">cookfs</b> for more details on compression in cookfs.</p></dd>
 <dt><b class="option">-compresscommand</b> <i class="arg">tcl command</i></dt>
