@@ -27,6 +27,7 @@ feature-aside bool
 feature-bzip2 bool
 feature-lzma bool
 feature-metadata bool
+feature-zstd bool
 package-version version
 tcl-commands bool
 }
